--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ node_modules/
 .idea/
 # VsCode generated file
 .vscode/
-creds.json/
+cypress/fixtures/creds.json
 # Cypress reports
 cypress/videos/
 cypress/screenshots/
+cypress.env.json
