--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,6 @@ cypress/fixtures/creds.json
 # Cypress reports
 cypress/videos/
 cypress/screenshots/
-cypress.env.json/
 /cypress/fixtures/creds.json
 cypress/reports/
+cypress.env.json 
